docs for latest distributions and packages
